i Change Section UI

--- a/ceo-quality/html/feature-2.html
+++ b/ceo-quality/html/feature-2.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/feature-1.css">
+    <link rel="stylesheet" href="../css/feature-2.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <link rel="shortcut icon" href="../images/R.png" type="image/x-icon">
-    <title>Views Tours1</title>
+    <title>Views Tours2</title>
 </head>
 
 <body>
@@ -52,10 +52,10 @@
         </div>
     </div>
     <div class="hero-image">
-        <img src="../images/f-1.webp" alt="" />
-        <h1>Best of Niagara Falls Tour – Canada</h1>
-        <p>| CA-SST2301</p>
-        <h4>Experience the unmatched beauty of the world-famous Niagara Falls</h4>
+        <img src="../images/ff2.webp" alt="" />
+        <h1>VANCOUVER & NORTH VANCOUVER FULL-DAY TOURS</h1>
+        <p>| CA-SST2326</p>
+        <h4>SAMLL-GROUP TOUR WILL GUIDE YOU THROUGHT ALL OF THE MUST-SEE SPOTS IN ONE ADVNETURE PACKE DAY!</h4>
     </div>
     <!-- end  class Menu -->
     <!-- start class nav-bar -->
@@ -88,7 +88,8 @@
             <div class="over-sub-right">
                 <div class="txt-box">
                     <h4>OVERVIEW</h4>
-                    <p>Make the most of your spectacular trip to Canada by paying a visit to the majestic Niagara Falls.
+                    <p>Spend an entire day exploring the beauty of Downtown Vancouver and North Vancouver on an intimate
+                        small-group tour
                     </p>
                 </div>
                 <div class="hr"></div>
@@ -97,32 +98,33 @@
                     <div class="hights-gride">
                         <div class="hight-gride">
                             <i class="fa-solid fa-check"></i>
-                            <p>Small-group tour of Niagara Falls in Canada – a maximum of 7 people</p>
+                            <p>Narrated driving tour of North & Downtown Vancouver, including Stanley Park</p>
                         </div>
                         <div class="hight-gride">
                             <i class="fa-solid fa-check"></i>
-                            <p>Exploring cave-like tunnels through the Journey Behind the Falls</p>
+                            <p>Incredible 360-degree view from the Vancouver Lookout</p>
                         </div>
                         <div class="hight-gride">
                             <i class="fa-solid fa-check"></i>
-                            <p>Riding In the mist on a cruiser boat</p>
+                            <p>1-Hour Vancouver Harbour Cruise*</p>
                         </div>
                         <div class="hight-gride">
                             <i class="fa-solid fa-check"></i>
-                            <p>Amazing photo stops at Niagara Whirlpool, Floral Clock, and more.</p>
+                            <p>Walk across Capilano Suspension Bridge and Cliffwalk</p>
+                        </div>
+                        <div class="hight-gride">
+                            <i class="fa-solid fa-check"></i>
+                            <p>Ride to the top of Grouse Mountain & Canadian Lumberjack Show</p>
                         </div>
                     </div>
                 </div>
                 <div class="hr"></div>
                 <div class="over-txt-box">
-                    <p>Canada is a country that holds a special place in the heart of every tourist that visits, and
-                        that’s large because Niagara Falls is one of the most iconic natural wonders in the world.
-                        Renowned and loved for its stunning natural beauty and its immense power, Ontario’s Niagara
-                        Falls is an experience like no other. The falls are located in the Canadian city of Niagara
-                        Falls and drain into Lake Erie and Lake Ontario.</p> <br>
-                    <p>Make the most of your spectacular trip to Canada by paying a visit to the majestic Niagara Falls.
-                        Tour along the famous Niagara Parkway and observe the multitude of things to do here. There are
-                        abundant opportunities for bespoke sightseeing tours in Niagara Falls. </p>
+                    <p>During this full-day tour, you get to experience the true essence of the Vancouver area –
+                        including famous landmarks like Stanley Park, the Vancouver Lookout Tower, Granville Island,
+                        Downtown Vancouver, the Capilano Suspension Bridge, the Harbor Cruise, and Grouse Mountain. With
+                        this full-day tour of Vancouver and its downtown area, you’re sure to have a fun-filled time
+                        exploring this vibrant city! </p>
                 </div>
                 <div class="user">
                     <div class="sub-user">
@@ -148,21 +150,21 @@
                         <i class="fa-solid fa-calendar-days"></i>
                         <div class="txt-p">
                             <p><strong>AVAILABILITY</strong></p>
-                            <P>ALL YEAR</P>
+                            <P>JUNE-STEP</P>
                         </div>
                     </div>
                     <div class="subs-details">
                         <i class="fa-solid fa-clock"></i>
                         <div class="txt-p">
                             <p><strong>DURATION</strong></p>
-                            <P>~4 HOURS</P>
+                            <P>5 HOURS</P>
                         </div>
                     </div>
                     <div class="subs-details">
                         <i class="fa-solid fa-map-location-dot"></i>
                         <div class="txt-p">
                             <p><strong>DEPARTS FROM</strong></p>
-                            <P>NIAGARA FALLS, ON</P>
+                            <P>VANCOUVER,BC</P>
                         </div>
                     </div>
                     <div class="subs-details">
@@ -183,7 +185,7 @@
                         <i class="fa-solid fa-users"></i>
                         <div class="txt-p">
                             <p><strong>RATIO</strong></p>
-                            <P>1:7</P>
+                            <P>1:6</P>
                         </div>
                     </div>
                     <div class="subs-details">
@@ -192,7 +194,7 @@
                             <p><strong>MEET ON<br>
                                     LOCATION
                                 </strong></p>
-                            <P>YES</P>
+                            <P>NO</P>
                         </div>
                     </div>
                     <div class="subs-details">
@@ -207,7 +209,7 @@
         </div>
         <div class="over-left">
             <h5>FROM</h5>
-            <p><strong style="font-size: 1.6rem;">117<span><strong
+            <p><strong style="font-size: 1.6rem;">312<span><strong
                             style="font-size: 19px; margin-left: 3px;">USD</strong></span></strong></p>
             <div class="hr"></div>
             <div class="over-left-best">
@@ -223,10 +225,10 @@
                     <i class="fa-solid fa-money-bill"></i>
                     <p>Best Price Guarantee</p>
                 </div>
-                <div class="best">
+                <!-- <div class="best">
                     <i style="color: red;" class="fa-solid fa-calendar-xmark"></i>
                     <p>Free Cancellation</p>
-                </div>
+                </div> -->
                 <div class="hr"></div>
             </div>
         </div>
@@ -236,15 +238,17 @@
     <div class="slider-container">
         <button class="nav-button prev" onclick="moveSlide(-1)">&#10094;</button>
         <div class="slider" id="slider">
-            <div class="slide"><img src="../images/1.webp" alt=""></div>
-            <div class="slide"><img src="../images/f-1-1.webp" alt=""></div>
-            <div class="slide"><img src="../images/f-1-2.webp" alt=""></div>
-            <div class="slide"><img src="../images/f-1-3.webp" alt=""></div>
-            <div class="slide"><img src="../images/f-1-4.webp" alt=""></div>
-            <div class="slide"><img src="../images/f-1-5.webp" alt=""></div>
-            <div class="slide"><img src="../images/f-1-6.webp" alt=""></div>
-            <div class="slide"><img src="../images/f-1-7.webp" alt=""></div>
-            <div class="slide"><img src="../images/f-1-8.webp" alt=""></div>
+            <div class="slide"><img src="../images/ff-1.webp" alt=""></div>
+            <div class="slide"><img src="../images/ff-2.webp" alt=""></div>
+            <div class="slide"><img src="../images/ff-3.webp" alt=""></div>
+            <div class="slide"><img src="../images/ff-4.webp" alt=""></div>
+            <div class="slide"><img src="../images/ff-5.webp" alt=""></div>
+            <div class="slide"><img src="../images/ff-6.webp" alt=""></div>
+            <div class="slide"><img src="../images/ff-7.webp" alt=""></div>
+            <div class="slide"><img src="../images/ff-8.webp" alt=""></div>
+            <div class="slide"><img src="../images/ff-9.webp" alt=""></div>
+            <div class="slide"><img src="../images/ff-10.webp" alt=""></div>
+            <div class="slide"><img src="../images/ff-11.webp" alt=""></div>
         </div>
         <button class="nav-button next" onclick="moveSlide(1)">&#10095;</button>
     </div>
@@ -257,42 +261,46 @@
                 <h4>INCLUDED</h4>
                 <div class="sub-gride">
                     <i class="fa-solid fa-check"></i>
-                    <p>Driving tour of Canadian side of Niagara Falls</p>
+                    <p>Small-Group guided tour of the City of Vancouver & North Vancouver (6 guest limit)</p>
                 </div>
                 <div class="sub-gride">
                     <i class="fa-solid fa-check"></i>
-                    <p>Admission to Hornblower Niagara Cruise</p>
+                    <p>Narrated drive through Downtown, Gastown, and Chinatown</p>
                 </div>
                 <div class="sub-gride">
                     <i class="fa-solid fa-check"></i>
-                    <p>Admission to Journey Behind the Falls</p>
+                    <p>Admission to Vancouver Lookout Tower</p>
                 </div>
                 <div class="sub-gride">
                     <i class="fa-solid fa-check"></i>
-                    <p>Admission to Skylon Tower</p>
+                    <p>Narrated drive through Stanley Park including: Prospect Point & Totem Poles</p>
                 </div>
                 <div class="sub-gride">
                     <i class="fa-solid fa-check"></i>
-                    <p>Photo stops at Floral Clock, Niagara Whirlpool and more</p>
+                    <p>1 Hour Vancouver Harbour Cruise*</p>
                 </div>
                 <div class="sub-gride">
                     <i class="fa-solid fa-check"></i>
-                    <p>Skip the ticket lines at select attractions</p>
+                    <p>Visit to Granville Island Market (food available for purchase)</p>
                 </div>
                 <div class="sub-gride">
                     <i class="fa-solid fa-check"></i>
-                    <p>Intimate, small-group tour size with 7 guest limit</p>
+                    <p>Admission to Capilano Suspension Bridge Park (includes Bridge, CliffWalk/Treetop Adventure)</p>
                 </div>
                 <div class="sub-gride">
                     <i class="fa-solid fa-check"></i>
-                    <p>Pick up and drop off from anywhere in Niagara Falls, Ontario</p>
+                    <p>Skyride Gondola to top of Grouse Mountain with Wildlife Refuge and Lumberjack Show</p>
                 </div>
             </div>
             <div class="sub-grides2">
                 <h4>WHAT TO BRING</h4>
                 <div class="sub-gride">
                     <i class="fa-solid fa-check"></i>
-                    <p>Camera</p>
+                    <p>Comfortable shoes</p>
+                </div>
+                <div class="sub-gride">
+                    <i class="fa-solid fa-check"></i>
+                    <p>Dress for the weather</p>
                 </div>
             </div>
             <div class="sub-grides3">
@@ -300,6 +308,10 @@
                 <div class="sub-gride">
                     <i style="color: #bb1213;" class="fa-solid fa-xmark"></i>
                     <p>Gratuities (optional)</p>
+                </div>
+                <div class="sub-gride">
+                    <i style="color: #bb1213;" class="fa-solid fa-xmark"></i>
+                    <p>Lunch - Available for purchase at Granville Island Market</p>
                 </div>
             </div>
         </div>
@@ -322,7 +334,7 @@
             <button class="contact-button">SEND</button>
         </div>
     </div>
-    <button class="contact-button" id="contactToggle" style="display: block; margin: 20px 90px 90px 90px"
+    <button class="contact-button" id="contactToggle" style="display: block; margin: 80px 90px 90px 90px"
         onclick="toggleContact()">CONTACT US NOW</button>
     <!-- end class contact -->
     <!-- start class itinerary -->
@@ -335,7 +347,7 @@
             <div class="subss-itinerary">
                 <div class="subsss-itinerary">
                     <div class="subsss-itinerary-img">
-                        <img src="../images/1.webp" alt="">
+                        <img src="../images/ff-1.webp" alt="">
                     </div>
                     <div class="subsss-itinerary-txt">
                         <p>The popular tour highlights the best ways to experience the unmatched beauty of the
@@ -451,6 +463,6 @@
     <!-- end class footer -->
 </body>
 <!-- link js -->
-<script src="../js/feature-1.js"></script>
+<script src="../js/feature-2.js"></script>
 
 </html>
