--- a/ceo-quality/html/feature-3.html
+++ b/ceo-quality/html/feature-3.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/feature-1.css">
+    <link rel="stylesheet" href="../css/feature-3.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <link rel="shortcut icon" href="../images/R.png" type="image/x-icon">
-    <title>Views Tours1</title>
+    <title>Views Tours3</title>
 </head>
 
 <body>
@@ -52,10 +52,10 @@
         </div>
     </div>
     <div class="hero-image">
-        <img src="../images/f-1.webp" alt="" />
-        <h1>Best of Niagara Falls Tour – Canada</h1>
-        <p>| CA-SST2301</p>
-        <h4>Experience the unmatched beauty of the world-famous Niagara Falls</h4>
+        <img src="../images/ff3.webp" alt="" />
+        <h1>TOUR OF NIAGARA FALLS IN CANADA - HELICOPTER RIDE AND LUNCH AND SKYLON TOWER</h1>
+        <p>| CA-SST2303</p>
+        <h4>FLY ABOVE THE MIGHTY NIAGARA FALLS BY TAKING A THRILLING HELICOPTER RIDE</h4>
     </div>
     <!-- end  class Menu -->
     <!-- start class nav-bar -->
@@ -88,7 +88,8 @@
             <div class="over-sub-right">
                 <div class="txt-box">
                     <h4>OVERVIEW</h4>
-                    <p>Make the most of your spectacular trip to Canada by paying a visit to the majestic Niagara Falls.
+                    <p>Observe the spectacular beauty of Canada’s Niagara Falls from the land and the air with the help
+                        of this exclusive tour package.
                     </p>
                 </div>
                 <div class="hr"></div>
@@ -97,32 +98,42 @@
                     <div class="hights-gride">
                         <div class="hight-gride">
                             <i class="fa-solid fa-check"></i>
-                            <p>Small-group tour of Niagara Falls in Canada – a maximum of 7 people</p>
+                            <p>Canada’s Niagara Falls</p>
                         </div>
                         <div class="hight-gride">
                             <i class="fa-solid fa-check"></i>
-                            <p>Exploring cave-like tunnels through the Journey Behind the Falls</p>
+                            <p>The American Falls</p>
                         </div>
                         <div class="hight-gride">
                             <i class="fa-solid fa-check"></i>
-                            <p>Riding In the mist on a cruiser boat</p>
+                            <p>The Horseshoe Falls
+                            </p>
                         </div>
                         <div class="hight-gride">
                             <i class="fa-solid fa-check"></i>
-                            <p>Amazing photo stops at Niagara Whirlpool, Floral Clock, and more.</p>
+                            <p>Lunch at Skylon Tower’s Summit Suite</p>
+                        </div>
+                        <div class="hight-gride">
+                            <i class="fa-solid fa-check"></i>
+                            <p>Helicopter ride above the Niagara Falls</p>
+                        </div>
+                        <div class="hight-gride">
+                            <i class="fa-solid fa-check"></i>
+                            <p>The Bridal Veil Falls</p>
+                        </div>
+                        <div class="hight-gride">
+                            <i class="fa-solid fa-check"></i>
+                            <p>Journey Behind the Falls</p>
                         </div>
                     </div>
                 </div>
                 <div class="hr"></div>
                 <div class="over-txt-box">
-                    <p>Canada is a country that holds a special place in the heart of every tourist that visits, and
-                        that’s large because Niagara Falls is one of the most iconic natural wonders in the world.
-                        Renowned and loved for its stunning natural beauty and its immense power, Ontario’s Niagara
-                        Falls is an experience like no other. The falls are located in the Canadian city of Niagara
-                        Falls and drain into Lake Erie and Lake Ontario.</p> <br>
-                    <p>Make the most of your spectacular trip to Canada by paying a visit to the majestic Niagara Falls.
-                        Tour along the famous Niagara Parkway and observe the multitude of things to do here. There are
-                        abundant opportunities for bespoke sightseeing tours in Niagara Falls. </p>
+                    <p>Advance to the edge of Horseshoe Falls and embark on an adventure-filled cruise on the Niagara
+                        Gorge. You also get to experience the power of the massive falls by going on the mesmerizing
+                        Journey Behind the Falls tour. At the same time, you will enjoy a special lunch at the Skylon
+                        Tower’s Summit Suite. Here, you can savor delicious local dishes while looking out over the
+                        majestic falls and their surroundings. </p>
                 </div>
                 <div class="user">
                     <div class="sub-user">
@@ -155,7 +166,7 @@
                         <i class="fa-solid fa-clock"></i>
                         <div class="txt-p">
                             <p><strong>DURATION</strong></p>
-                            <P>~4 HOURS</P>
+                            <P>6 HOURS</P>
                         </div>
                     </div>
                     <div class="subs-details">
@@ -179,13 +190,13 @@
                             <P>EASY</P>
                         </div>
                     </div>
-                    <div class="subs-details">
+                    <!-- <div class="subs-details">
                         <i class="fa-solid fa-users"></i>
                         <div class="txt-p">
                             <p><strong>RATIO</strong></p>
                             <P>1:7</P>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="subs-details">
                         <i class="fa-solid fa-signs-post"></i>
                         <div class="txt-p">
@@ -207,7 +218,7 @@
         </div>
         <div class="over-left">
             <h5>FROM</h5>
-            <p><strong style="font-size: 1.6rem;">117<span><strong
+            <p><strong style="font-size: 1.6rem;">262<span><strong
                             style="font-size: 19px; margin-left: 3px;">USD</strong></span></strong></p>
             <div class="hr"></div>
             <div class="over-left-best">
@@ -236,15 +247,17 @@
     <div class="slider-container">
         <button class="nav-button prev" onclick="moveSlide(-1)">&#10094;</button>
         <div class="slider" id="slider">
-            <div class="slide"><img src="../images/1.webp" alt=""></div>
-            <div class="slide"><img src="../images/f-1-1.webp" alt=""></div>
-            <div class="slide"><img src="../images/f-1-2.webp" alt=""></div>
-            <div class="slide"><img src="../images/f-1-3.webp" alt=""></div>
-            <div class="slide"><img src="../images/f-1-4.webp" alt=""></div>
-            <div class="slide"><img src="../images/f-1-5.webp" alt=""></div>
-            <div class="slide"><img src="../images/f-1-6.webp" alt=""></div>
-            <div class="slide"><img src="../images/f-1-7.webp" alt=""></div>
-            <div class="slide"><img src="../images/f-1-8.webp" alt=""></div>
+            <div class="slide"><img src="../images/ff3-1.webp" alt=""></div>
+            <div class="slide"><img src="../images/ff3-2.webp" alt=""></div>
+            <div class="slide"><img src="../images/ff3-3.webp" alt=""></div>
+            <div class="slide"><img src="../images/ff3-4.webp" alt=""></div>
+            <div class="slide"><img src="../images/ff3-5.webp" alt=""></div>
+            <div class="slide"><img src="../images/ff3-6.webp" alt=""></div>
+            <div class="slide"><img src="../images/ff3-7.webp" alt=""></div>
+            <div class="slide"><img src="../images/ff3-8.webp" alt=""></div>
+            <div class="slide"><img src="../images/ff3-9.webp" alt=""></div>
+            <div class="slide"><img src="../images/ff3-10.webp" alt=""></div>
+            <div class="slide"><img src="../images/ff3-11.webp" alt=""></div>
         </div>
         <button class="nav-button next" onclick="moveSlide(1)">&#10095;</button>
     </div>
@@ -257,11 +270,7 @@
                 <h4>INCLUDED</h4>
                 <div class="sub-gride">
                     <i class="fa-solid fa-check"></i>
-                    <p>Driving tour of Canadian side of Niagara Falls</p>
-                </div>
-                <div class="sub-gride">
-                    <i class="fa-solid fa-check"></i>
-                    <p>Admission to Hornblower Niagara Cruise</p>
+                    <p>12-minute Niagara Helicopter ride</p>
                 </div>
                 <div class="sub-gride">
                     <i class="fa-solid fa-check"></i>
@@ -269,23 +278,27 @@
                 </div>
                 <div class="sub-gride">
                     <i class="fa-solid fa-check"></i>
-                    <p>Admission to Skylon Tower</p>
+                    <p>Admission to Hornblower Niagara Cruise ride (seasonal)</p>
                 </div>
                 <div class="sub-gride">
                     <i class="fa-solid fa-check"></i>
-                    <p>Photo stops at Floral Clock, Niagara Whirlpool and more</p>
+                    <p>Lunch at Skylon Tower and entrance to observation deck</p>
                 </div>
                 <div class="sub-gride">
                     <i class="fa-solid fa-check"></i>
-                    <p>Skip the ticket lines at select attractions</p>
+                    <p>Scenic narrated driving tour of Niagara Falls</p>
                 </div>
                 <div class="sub-gride">
                     <i class="fa-solid fa-check"></i>
-                    <p>Intimate, small-group tour size with 7 guest limit</p>
+                    <p>Skip the ticket line at select attractions</p>
                 </div>
                 <div class="sub-gride">
                     <i class="fa-solid fa-check"></i>
-                    <p>Pick up and drop off from anywhere in Niagara Falls, Ontario</p>
+                    <p>Intimate, guided, small-group tour experience (groups are limited to 7 people)</p>
+                </div>
+                <div class="sub-gride">
+                    <i class="fa-solid fa-check"></i>
+                    <p>Pick up and drop off from anywhere in Niagara Falls, Ontario Canada</p>
                 </div>
             </div>
             <div class="sub-grides2">
@@ -335,35 +348,28 @@
             <div class="subss-itinerary">
                 <div class="subsss-itinerary">
                     <div class="subsss-itinerary-img">
-                        <img src="../images/1.webp" alt="">
+                        <img src="../images/ff3-1.webp" alt="">
                     </div>
                     <div class="subsss-itinerary-txt">
-                        <p>The popular tour highlights the best ways to experience the unmatched beauty of the
-                            world-famous Niagara Falls. Onboard a majestic Niagara Falls cruise boat, you will
-                            experience the massive falls up close. You’ll even venture behind and underneath the
-                            powerful water with the help of the Journey Behind the Falls. If that’s not enough, you’ll
-                            also get to admire the majestic beauty of this one-of-a-kind attraction from above in the
-                            Skylon Tower.</p> <br>
-                        <p>The fun-filled and thrilling tour of the mesmerizing Niagara Falls commences at your hotel
-                            where you will be picked up. The first stop on the tour is Skylon Tower. You will head up
-                            the breathtaking glass elevator to the observation deck. Here, you will marvel at the
-                            amazing, bird’s-eye view of the Niagara Falls. You will have a panoramic view of the three
-                            Niagara Falls including American Falls, Horseshoe Falls, and Bridal Veil Falls. At the same
-                            time, you also get to enjoy the views of the underlying Niagara River and take in the area’s
-                            immense natural beauty.</p> <br>
-                        <p>Once you’re done taking in the views, you will get the opportunity to descend around 40
-                            meters to explore the cave-like tunnels located behind the falls at Journey Behind the
-                            Falls. This experience will be a treat for all of your senses. This is because , you not
-                            only get to hear the thunderous sound of the falls, but you will also get an opportunity to
-                            feel its immense power. The tunnels lead to two beautiful observation decks, offering you
-                            the perfect opportunity to take excellent photos.</p> <br>
-                        <p>Once you have visited the spectacular Journey Behind the Falls, you will be taken on the
-                            Niagara cruise boat journey. On the boat, you get to traverse across the waters of the
-                            Niagara River while getting as close to the falls as possible. You can feel the refreshing
-                            water as well the mist. To protect your clothing, you will be provided with a recyclable
-                            waterproof poncho.</p> <br>
-                        <p>During the final part of the tour, you will be given a guided tour of the city where you’ll
-                            get to learn about the rich history as well as the distinct geography of Niagara Falls.</p>
+                        <p>This adventure-filled tour of Niagara Falls on a helicopter starts with a direct pick-up from
+                            your hotel. You can enjoy the narrated tour of the entire city while heading up to the
+                            impressive falls. </p> <br>
+                        <p>The first stop of the tour is the Journey Behind the Falls experience. During this part of
+                            the tour, you will descend around 125 feet and explore the cave-like tunnels that are
+                            located behind the falls. The tunnels lead to two observation decks from where you can snap
+                            amazing pictures of the falls, which are directly in front of you.</p> <br>
+                        <p>The next experience of this tour is quite unforgettable – a helicopter ride above Niagara
+                            Falls! From the helicopter, you get to experience the real power and beauty of the falls and
+                            look out over the gorge and its surroundings. You will not only take some amazing pictures
+                            but you will make memories to last a lifetime.</p> <br>
+                        <p>Once you have finished the helicopter ride, you will be taken on a Niagara Gorge cruise. This
+                            allows you to get up close to the main falls while embracing the natural beauty all around.
+                            By sailing through the Niagara Gorge, you can feel the power of the most majestic falls in
+                            the world.</p> <br>
+                        <p>After the cruise, you will visit the Skylon Tower and have a hearty lunch at the restaurant.
+                            You will be taken to the restaurant area via a glass elevator overlooking the falls. The
+                            restaurant also offers full panoramic views of the falls allowing you to have a great time
+                            with friends and family. </p>
                     </div>
                 </div>
             </div>
@@ -451,6 +457,6 @@
     <!-- end class footer -->
 </body>
 <!-- link js -->
-<script src="../js/feature-1.js"></script>
+<script src="../js/feature-2.js"></script>
 
 </html>
