--- a/ceo-quality/html/tour-pack.html
+++ b/ceo-quality/html/tour-pack.html
@@ -89,7 +89,7 @@
                     <p>DURATION<br><span style="color: #49B11E;">5 HOURS</span></p>
                     <p>DEPARTS FROM<br><span style="color: #49B11E;">VANCOURVER, BC</span></p>
                 </div>
-                <button class="views"><a href="">VIEW TOUR</a></button>
+                <button class="views"><a href="../html/feature-2.html" target="_blank">VIEW TOUR</a></button>
                 <p class="price">312 USD</p>
             </div>
         </div>
@@ -107,8 +107,8 @@
                     <p>DURATION<br><span style="color: #49B11E;">6 HOURS</span></p>
                     <p>DEPARTS FROM<br><span style="color: #49B11E;">NIAGARA FALLS.ON</span></p>
                 </div>
-                <button class="views"><a href="">VIEW TOUR</a></button>
-                <p class="price">261 USD</p>
+                <button class="views"><a href="../html/feature-3.html" target="_blank">VIEW TOUR</a></button>
+                <p class="price">262 USD</p>
             </div>
         </div>
         <!-- cart4 -->
